  Jahr/Ausgabe bestimmt. Auf jedem Ordner kann durch die WebDAV-Property
  {http://namespaces.zeit.de/CMS/Image}base-folder bestimmt werden wo die
  Wurzel für den Bereich ist (z.B. /zuender ->
  http://xml.zeit.de/bilder/zuender/)
- Kein Fehler mehr beim Bearbeiten von Objekten, die nicht mehr im Repository
  existieren (bug #4291).
- Biga hat jetzt Assets (bug #4294).

0.9.21 (2008-06-19)
-------------------

- Noch bessere Unterstützung für alte Bildergalerien, so dass auch der Text
  richtig übernommen wird.

0.9.20 (2008-06-18)
-------------------

- XML-Editor: <column> unterhalb von <block> erlaubt (Zuender)
- XML-Editor: <block> mit priority="" geht nicht mehr kaputt.
- XML-Editor: Lange URLs im <block href=... zerfetzen das Layout nicht mehr
- XML-Editor: Bearbeiten von hrefs im <block>
- XML-Editor: Besseres "Click-Verhalten" beim Anzeigen der Aktionen
- Bessere Unterstützung für alte Bildergelerie

0.9.19 (2008-06-16)
-------------------

- Re-added released_from/released_to to the Workflow interfaces.

0.9.18 (2008-06-16)
-------------------

- Rekursives veröffentlichen und zurückziehen.
- Lighbox-Überschrift überdeckt jetzt nicht mehr den Schließen-Knopf
- Homepage-Teaser werden jetzt auch per JS begrenzt.
- Das Verwenden verschiedener Formate in einer Bildergruppe ist jetzt erlaubt.
- Veröffentlichungs- und Zurückziehscript eingebunden.
- Spezieller Workflow für Assets (derzeit nur Bilder).
- Zeitgesteuertes veröffentlichen/zurückziehen.
- Unterressort auswählen funktioniert jetzt ohne vorherigem Speichern des
  Ressorts (bug #4268).
- Keyword-Typeahead rennt jetzt nicht mehr bei jedem Buchstaben zum Server;
  außerdem wird das Ergebnis vom Browser gecacht (bug 4270).
- "Unendlich"-Knopf bei Datumseingabe (leert das Feld).
- Bilder haben kein besonderes Löschdatum mehr, dafür ist der Workflow da.
- Formulare sind nicht mehr Denglisch (bug #3734).
- WYSIWYG-Editor: Popups zeigen jetzt den Cursor an (bug #4221).