@@ -17,6 +17,7 @@ zeit.cms changes
 - Kein Fehler mehr beim Bearbeiten von Objekten, die nicht mehr im Repository
   existieren (bug #4291).
 - Biga hat jetzt Assets (bug #4294).
+- Biga hat jetzt <gallery> als Root-Tag (bug #4295).
 
 0.9.21 (2008-06-19)
 -------------------
